Man i love frogs

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Artistas</title>
-    <link rel="stylesheet" href="src/css/index.css">
+    <link rel="stylesheet" href="src/main/css/index.css">
 </head>
 <body>
 <h1>Artistas</h1>
@@ -20,7 +20,7 @@
                     <strong><a href="src/main/resToNGINX/Drake.html">Ver los albumes del artista</a></strong>
                 </p>
             </div>
-            <img class="autor-image" src="../img/drake-perf.jpg" alt="Imagen de Artista">
+            <img class="autor-image" src="src/main/img/../img/drake-perf.jpg" alt="Imagen de Artista">
         </div>
     </li>
     <li>
@@ -36,7 +36,7 @@
                     <strong><a href="src/main/resToNGINX/J. Cole.html">Ver los albumes del artista</a></strong>
                 </p>
             </div>
-            <img class="autor-image" src="../img/jcole-perf.jpg" alt="Imagen de Artista">
+            <img class="autor-image" src="src/main/img/../img/jcole-perf.jpg" alt="Imagen de Artista">
         </div>
     </li>
     <li>
@@ -52,7 +52,7 @@
                     <strong><a href="src/main/resToNGINX/Kendrick Lamar.html">Ver los albumes del artista</a></strong>
                 </p>
             </div>
-            <img class="autor-image" src="../img/kendrick-perf.jpg" alt="Imagen de Artista">
+            <img class="autor-image" src="src/main/img/../img/kendrick-perf.jpg" alt="Imagen de Artista">
         </div>
     </li>
 </ul>
